--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         coverage run -m unittest keras_utils/tests/test_*.py
     - name: Upload Coverage to Codecov
+      if: '!cancelled()'
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
