--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,9 +35,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with unittest
+    - name: Test with pytest
       run: |
-        coverage run -m unittest keras_utils/tests/test_*.py
+        coverage run -m pytest
     - name: Upload Coverage to Codecov
       if: '!cancelled()'
       uses: codecov/codecov-action@v4
